overflow fix

--- a/assets/main.sass
+++ b/assets/main.sass
@@ -118,6 +118,8 @@ body
   display: none
   max-width: 600px
   padding: 35px
+  max-height: 80vh
+  overflow-y: auto
   margin: auto
   background: white
   // margin-top: 40vh
@@ -125,6 +127,10 @@ body
   cursor: default
   font-size: 1.3rem
   border-radius: 3px
+  p
+    font-size: 1.2rem
+    strong
+      font-size: 1.5rem
   @extend .dark-shadow
 .mod-wrapper
   position: fixed
